More probability calculations, game tree in the probability class, etc.